[gd_scene load_steps=5 format=3 uid="uid://ch53hlq65v6ij"]

[ext_resource type="Script" uid="uid://ceacxuiy4847h" path="res://barrel/barrel.gd" id="1_a12vh"]
[ext_resource type="Texture2D" uid="uid://c21smonqjnvvy" path="res://assets/barrel.png" id="1_n8un1"]
[ext_resource type="Script" uid="uid://diciamkrxbr8n" path="res://hitpoints/health_component.gd" id="6_twyt7"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_a12vh"]
radius = 36.0
height = 72.0

[node name="Barrel" type="RigidBody2D" groups=["floaters"]]
contact_monitor = true
max_contacts_reported = 50
script = ExtResource("1_a12vh")
rise_up_time = 0.5
health = 5

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_n8un1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -8)
shape = SubResource("CapsuleShape2D_a12vh")

[node name="RiseTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
autostart = true

[node name="DetonationTimer" type="Timer" parent="."]
one_shot = true

[node name="FireContainer" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("6_twyt7")
metadata/_custom_type_script = "uid://diciamkrxbr8n"

[connection signal="health_updated" from="HealthComponent" to="." method="_on_health_component_health_updated"]
[connection signal="max_health_updated" from="HealthComponent" to="." method="_on_health_component_max_health_updated"]
