[gd_scene load_steps=11 format=3 uid="uid://ch53hlq65v6ij"]

[ext_resource type="Script" uid="uid://ceacxuiy4847h" path="res://src/barrel/barrel.gd" id="1_a12vh"]
[ext_resource type="Texture2D" uid="uid://c21smonqjnvvy" path="res://assets/barrel.png" id="1_n8un1"]
[ext_resource type="PackedScene" uid="uid://bw1hebeplamra" path="res://src/hitpoints/hitpoint_bar.tscn" id="3_rdxsi"]
[ext_resource type="Texture2D" uid="uid://cqn0fntt0dsc6" path="res://assets/Effects/explosion1.png" id="4_1m3au"]
[ext_resource type="Texture2D" uid="uid://ccj3yfwutp0pr" path="res://assets/Effects/explosion2.png" id="5_pwlc7"]
[ext_resource type="Texture2D" uid="uid://44jyl5eumchr" path="res://assets/Effects/explosion3.png" id="6_3ubix"]
[ext_resource type="Script" uid="uid://bbjorr5ncie7p" path="res://src/barrel/barrel_explosion.gd" id="7_pwlc7"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_a12vh"]
radius = 36.0
height = 72.0

[sub_resource type="SpriteFrames" id="SpriteFrames_18xnr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_3ubix")
}, {
"duration": 1.0,
"texture": ExtResource("4_1m3au")
}, {
"duration": 1.0,
"texture": ExtResource("5_pwlc7")
}],
"loop": false,
"name": &"default",
"speed": 6.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_1m3au"]
radius = 97.0464

[node name="Barrel" type="RigidBody2D" groups=["floaters"]]
disable_mode = 1
collision_layer = 4
collision_mask = 15
mass = 1000.0
contact_monitor = true
max_contacts_reported = 50
script = ExtResource("1_a12vh")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_n8un1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -8)
shape = SubResource("CapsuleShape2D_a12vh")

[node name="HitpointBar" parent="." instance=ExtResource("3_rdxsi")]
max_hitpoints = 10

[node name="Effects" type="CanvasGroup" parent="."]

[node name="EndExplosion" type="AnimatedSprite2D" parent="Effects"]
visible = false
position = Vector2(0, -6)
scale = Vector2(1.42373, 1.42373)
sprite_frames = SubResource("SpriteFrames_18xnr")
frame = 2
frame_progress = 1.0

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 17
script = ExtResource("7_pwlc7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_1m3au")

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
